# py-photo-sorter

./: LICENSE  Makefile  README.md  py-photo-arranger.py  pyproject.toml  pytest.ini  requirements-dev.txt  tox.ini
mk/: Makefile.defs
photo_sorter/: loguru_decorator.py  photo_exif_metadata.py
src/: arranger.py  config.py
tests/: test_photo_exif_metadata.py
